# censusmetadata

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/censusmetadata/: __init__.py  _version.py  censusmetadata.py  exceptions.py  utility.py
